--- a/Portfolio/src/styles/styles.css
+++ b/Portfolio/src/styles/styles.css
@@ -44,15 +44,23 @@ h3 {
 .main-container {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     min-height: 75vh;
 }
 
 .left-content {
     width: 40%;
+    max-width: 40%;
+    background-color: #000;
+    padding: 20px;
+    border-radius: 5px;
+    
+    overflow-wrap: break-word;  
 }
 
 .abcontainer {
     width: 60%;
+    max-width: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -85,7 +93,8 @@ h3 {
 
 .App {
     background-image: url('../assets/background.avif');
-    background-size: fill;
+    background-size: cover;
+    background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -384,4 +393,41 @@ h3 {
   
 .contact-container ul {
     margin-top: -10px; 
+}
+
+/* Typing effect setting */
+.console-line {
+    background-color: black;
+    color: white;
+    padding: 1rem;
+    width: 90%; /* adjust this value as needed */
+    height: 400px; /* adjust this value as needed */
+    margin: auto;
+    border-radius: 5px;
+    overflow: hidden; /* hide overflow text */
+    white-space: pre-wrap; /* preserve spaces and line breaks */
+    font-family: 'Courier New', Courier, monospace; /* give it a CLI feel */
+    opacity: 0;
+    transition: opacity 2s ease-in-out;
+    animation: fadeIn 2s forwards;
+}
+
+.console-cursor {
+    display: inline-block;
+    width: 10px;
+    height: 20px;
+    background: #fff;
+    margin-left: 5px;
+    animation: blink 1s steps(1) infinite;
+}
+
+@keyframes blink {
+    50% {
+        opacity: 0;
+    }
+}
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+    }
 }
