--- a/Portfolio/src/styles/styles.css
+++ b/Portfolio/src/styles/styles.css
@@ -170,9 +170,29 @@ h3 {
 }
 
 .bracket {
-    font-size: 2.0em; /* adjust as needed */
+    font-size: 2.0em; 
     color: var(--quinary-color);
 }
+@media only screen and (max-width: 768px) {
+    .header-container {
+        padding: 20px; 
+        margin-left: 20px;
+    }
+
+    .name {
+        font-size: 1.0em; 
+    }
+
+    .title {
+        font-size: 0.5em; 
+    }
+
+    .bracket {
+        font-size: 2.7em; 
+    }
+    
+}
+
 /*-------------------/*
 /* Footer Settings */
 .logos {
@@ -239,6 +259,25 @@ h3 {
   .nav-item:last-child::after {
     content: '';
   }
+
+  @media only screen and (max-width: 1200px) {
+    .nav {
+        flex-direction: column;
+        gap: 0;
+    }
+
+    .nav-item {
+        border-bottom: 1px solid var(--quinary-color); /* horizontal line separator */
+    }
+
+    .nav-item::after {
+        content: ''; /* remove vertical separator */
+    }
+
+    .nav-item:last-child {
+        border-bottom: none; /* remove border for the last item */
+    }
+}
 
 
 /* -------------------------------- */ 
