--- a/Portfolio/src/styles/styles.css
+++ b/Portfolio/src/styles/styles.css
@@ -6,22 +6,29 @@
 
 
 :root {
+    --primary-color1: #fafafa;
+    --secondary-color1: #eaeaea;
+    --tertiary-color1: #659BDB;
+    --quinary-color1: #659BDB;
+}
+
+[data-theme='dark'] {
     --primary-color: #0b0c10;
-    --secondary-color: #1f2833;
-    --tertiary-color: #c5c6c7;
-    --quaternary-color: #66fcf1;
-    --quinary-color: #45a29e;
+    --secondary-color: #08494d;
+    --tertiary-color: #C5C6C7;
+    --quinary-color: #116466;
 }
 
 /* Main app settings */
 .App {
     font-family: 'Open Sans', sans-serif;
-    background-image: url('../assets/background.avif');
+    /* background-image: url('../assets/background.avif');
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: var(--primary-color);
     
     margin: 0;
     padding: 0;
@@ -44,9 +51,11 @@ h1 {
 }
 
 h2 {
-    color: var(--tertiary-color);
+    color: var(--quinary-color);
     font-family: 'Merriweather', serif;
     font-size: 2.7rem;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.4); 
+    -webkit-text-stroke: 1px var(--quinary-color);
 }
 
 h3 {
@@ -60,9 +69,10 @@ h3 {
 .main-container {
     display: flex;
     justify-content: space-around;
-  
+    margin-bottom: 50px;
     min-height: 75vh;
-}
+    }
+
 
 .left-content, .right-content {
     width: 50%;  
@@ -82,12 +92,11 @@ h3 {
 }
 
 .left-content img {
-    width: 200px; 
-    height: 200px;
+    width: 150px; 
+    height: 150px;
     margin-top: 20px;
     border-radius: 50%;
-    display: flex;
-    justify-content: center;
+    
 }
 
 .left-content .abparagraph {
@@ -108,10 +117,7 @@ h3 {
     -webkit-text-stroke: 1px var(--tertiary-color);
     }
 
-.abimage {
-    display: flex;
-    justify-content: center;
-}
+
 @media only screen and (max-width: 768px) {
     .main-container {
         flex-direction: column;
@@ -208,6 +214,25 @@ h3 {
   
   .logos .logo {
     margin-right: 20px;
+}
+
+.toggleThemeButton {
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+}
+
+.toggleThemeButton svg {
+    fill: var(--quinary-color);
+    transition: fill 0.3s ease; 
+    background: none;
+    border: none;
+    margin-left: 10px;
+}
+
+.toggleThemeButton:hover svg {
+    fill: var(--tertiary-color); 
 }
 
 .FooterWrapper {
@@ -336,19 +361,30 @@ h3 {
 /* Project settings */
 
 .projectcontainer {
-    margin-left: 50px;
+    /* margin-left: 50px; */
     margin-bottom: 100px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+}
+.projectcontainer p {
+    text-align: center; 
+    width: 100%; 
+    max-width: 800px; 
+    margin-bottom: 20px; 
+    color: var(--quinary-color);
+    font-size: 1.5rem;
+    font-family: 'Open Sans', sans-serif;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.4); 
+    -webkit-text-stroke: 1px var(--tertiary-color);
+    
 }
 
 .grid-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
-    margin-left: 200px; 
-}
+    }
 
 .grid-item {
     background-size: cover;
@@ -487,7 +523,14 @@ h3 {
     transition: opacity 2s ease-in-out;
     animation: fadeIn 2s forwards;
     line-height: 1.5;
+    scrollbar-width: none; 
+    -ms-overflow-style: none;  
 }
+
+.console-line::-webkit-scrollbar {
+    display: none;
+}
+
 
 .console-cursor {
     display: inline-block;
@@ -509,3 +552,10 @@ h3 {
     }
 }
 /* -------------------------------- */
+
+hr {
+    border: 0;               /* Removes the default border */
+    border-top: 1px solid var(--tertiary-color);  /* Creates a subtle light line */
+    width: 70%;              /* Sets the width to 80% of its container */
+    margin: 15px auto;       /* Centers the line and gives space above and below */
+}
