--- a/Portfolio/src/styles/styles.css
+++ b/Portfolio/src/styles/styles.css
@@ -327,11 +327,15 @@ h3 {
 /* Resume settings */
 
 .resumecontainer {
-    margin-left: 50px;
+    
+    
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     color: var(--tertiary-color);
+    margin-top: 50px;
+  
 }
 
 .resumecontainer li {
@@ -342,7 +346,7 @@ h3 {
   
 .resumecontainer a {
     font-size: 2em; 
-    color: var(--primary-color);
+    color: var(--quinary-color);
 }
 
   .resumecontainer h2 {
@@ -362,7 +366,7 @@ h3 {
 
 .projectcontainer {
     /* margin-left: 50px; */
-    margin-bottom: 100px;
+    margin-bottom: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -416,7 +420,6 @@ h3 {
 .github-logo {
     width: 50px;
     height: 50px;
-    fill: var(--tertiary-color);
     transform: scale(1);
     transition: transform 0.3s ease, color 0.3s ease;
 }
@@ -427,18 +430,20 @@ h3 {
     left: 10px;
     margin: 0;
     padding: 0;
-    color: var(--quinary-color);
     text-decoration: none;
     font-size: 2em;
     transform: scale(1);
     transition: transform 0.3s ease, color 0.3s ease;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.4); 
+    -webkit-text-stroke: 1px var(--quinary-color);
 }
 
 .grid-item:hover .github-link,
 .grid-item:hover .project-title {
     opacity: 1;
     transform: scale(1.2);
-    color: var(--quinary-color);
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.4); 
+    -webkit-text-stroke: 1px var(--quinary-color);
 }
 
 .project-title2 {
@@ -447,9 +452,10 @@ h3 {
     left: 10px;
     margin: 0;
     padding: 0;
-    color: black;
     text-decoration: none;
     font-size: 2em;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.4); 
+    -webkit-text-stroke: 1px var(--quinary-color);
 }
 
 .github-link,
@@ -460,9 +466,10 @@ h3 {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: black;
     text-decoration: none;
     font-family: bold;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.4); 
+    -webkit-text-stroke: 1px var(--quinary-color);
 }
 
 .grid-item:hover .github-link,
